--- a/index.html
+++ b/index.html
@@ -65,14 +65,26 @@
         <ul>
           <li class="active"><a href="#intro">Home</a></li>
           <li><a href="#about">About Me</a></li>
-          <li><a href="#portfolio">Photos</a></li>                    
+          <li><a href="#portfolio">Photos</a></li>
+          <li class="drop-down"><a href="#features">Experience</a>
+            <ul>
+              <li><a href="#education">Education</a>
+              </li>
+              <li><a href="#work">Work</a>
+              </li>
+              <li><a href="#odl">ODL</a>
+              </li>
+            </ul>
+          </li>
           <li><a href="#footer">Contact Me</a></li>
           <li class="drop-down"><a href="#projects">Projects</a>
             <ul>
               <li><a href="#projects">BPNN Calculator</a>
               </li>
               <li><a href="#projects">NiceHash Mining CSV Analyzer</a>
-            </li>
+              </li>
+              <li><a href="#projects">Proxy Scrape</a>
+              </li>
               <!--<li class="drop-down"><a href="#">Drop Down 2</a>
                 <ul>
                   <li><a href="#">Deep Drop Down 1</a></li>
@@ -133,8 +145,7 @@
               <p>Hello, my name is Aiman Siddiq, I'm a fan of computer. <br>I studied Computer Science during my diploma
                 and
                 Intelligent Systems Engineering for my degree.</p>
-              <p>I live in Puchong, I play games, and I do not even have any achievements so thank you for visiting and
-                do contact me if some of my works has bugs.</p>
+              <p>I live in Puchong, I play games, and I do not even have any achievements so thank you for visiting.</p>
               <a href="#projects" class="btn-wtv scrollto">Projects</a>
             </div>
           </div>
@@ -151,7 +162,7 @@
           <h3 class="section-title">Photos</h3>
         </header>
 
-        <div class="row" data-aos="fade-up" data-aos-delay="100">
+        <!--<div class="row" data-aos="fade-up" data-aos-delay="100">
           <div class="col-lg-12">
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">All</li>
@@ -162,7 +173,7 @@
           </div>
         </div>
 
-        <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
+        <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">-->
 
           <!--<div class="col-lg-4 col-md-6 portfolio-item filter-app">
         <div class="portfolio-wrap">
@@ -296,6 +307,90 @@
     </section><!-- End Portfolio Section -->
 
     <!--==========================
+      Features Section
+    ============================-->
+    <section id="features">
+      <div class="container">
+        <div class="row feature-item" id="education">
+          <div class="col-lg-6 wow fadeInUp">
+            <img src="img/undraw_back_to_school_inwc.svg" class="img-fluid" alt="">
+          </div>
+          <div class="col-lg-6 wow fadeInUp pt-5 pt-lg-0">
+            <header class="section-header">
+              <h3 class="section-title">Education</h3>
+            </header>
+            <p>
+            <h5><b>SMK Puchong Utama 1<br>(2012 - 2016)</b></h5>
+            Few ABCs
+            <br><br>
+            <h5><b>UiTM Segamat Diploma in Computer Science <br>(2017 May - 2020 January)</b></h4>
+              CGPA: <span data-toggle="counter-up">3.74</span>
+              <br><br>
+              <h5><b>UiTM Shah Alam Degree in Intelligent Systems Engineering <br>(2020 March - Present)</b></h4>
+                Currently pursuing..
+                </p>
+                <p>
+
+                </p>
+          </div>
+        </div>
+
+        <div class="row feature-item mt-5 pt-5" id="work">
+          <div class="col-lg-6 wow fadeInUp order-1 order-lg-2">
+            <img src="img/undraw_absorbed_in_xahs.svg" class="img-fluid" alt="">
+          </div>
+          <div class="col-lg-6 wow fadeInUp pt-4 pt-lg-0 order-2 order-lg-1">
+            <header class="section-header">
+              <h3 class="section-title">Work</h3>
+            </header>
+            <p>
+            <h5><b>TGV Cinemas Sdn. Bhd. <br>(2017, January - May)</b></h4>
+              Customer Service - Part Time
+              <br>
+              Work a little bit to gain some money after SPM, gain pretty much experience on handling with short-term
+              customer
+              <br><br>
+
+              <h5><b>iSente Sdn. Bhd.<br>(2019 June - 2020 February)</b></h4>
+                Technician - Internship / Part Time
+                <br>
+                A network company that based on project, I started working as an intern then during semester break I
+                started as part-time.
+                <br><br>
+
+                <h5><b>Computer/Laptop Repairing Freelance<br>(2020 - Present)</b></h4>
+                  Freelance
+                  <br>
+                  PC Building has always been my hobby and during my journey upgrading my slow computer. I've learnt a
+                  lot about computer and gained
+                  knowledge over time. I convert my hobby and skill into closed business helping my circle building
+                  computer, fixes etc. Until 2020, I decided
+                  to go freelance and open around my area. It is still not big because I do not have much manpower but I
+                  am open for order.
+                  <br><br>
+                  </p>
+          </div>          
+        </div>
+        
+        <div class="wow fadeInUp order-1 order-lg-2" id="odl">
+          <header class="section-header wow fadeInUp">            
+            <h3>ODL (Open Distance Learning)</h3>
+            <img style="display: block;margin-left: auto;margin-right: auto;width: 40%;" src="img/undraw_working_remotely_jh40.svg" height="300px" alt=""> 
+            <p>
+              2020 is a whole new story for everyone. Due to a pandemic of COVID-19. 
+              <br><br>
+              Almost everything is handled online schools, work, foods, sports. I am as a student is of course affected by the pandemic. 
+              Plus, I just started my degree and few weeks in and I already need to continue it online. For me there are <b>pros</b> and <b>cons.</b>
+              <br><br>
+              I am lucky my family and my living area is able to handle online stuff however there are out there unlucky with this
+              pandemic.
+            </p>
+          </header>
+        </div>
+      </div>
+    </section><!-- #about -->
+
+    <!--==========================
       Services Section
     ============================-->
     <section id="projects" class="section-bg">
@@ -307,18 +402,33 @@
         </header>
 
         <div class="row">
-
-          <div class="col-md-6 col-lg-4 wow bounceInUp" data-wow-duration="1.4s">
+          <div class="col-md-6 col-lg-4 wow bounceInUp" data-wow-duration="1.2s">
             <div class="box">
-              <div class="icon" style="background: #fceef3;"><i class="ion-ios-analytics-outline"
+              <div class="icon" style="background: #fceef3;"><i class="ion-ios-paper-outline"
                   style="color: #ff689b;"></i></div>
-              <h4 class="title"><a href="#"
-                  onclick="window.alert('The project is still working in progress'); return false;">BPNN Calculator
-                  (WIP) </a></h4>
-              <p class="description">A calculator that automatically solve the BPNN algorithm to help you answer BPNN
-                questions</p>
+              <h4 class="title"><a href="https://github.com/aimansddiq/nshcsvtotalrig">NiceHash Mining CSV Analyzer</a>
+              </h4>
+              <p class="description">NiceHash provide their user with .csv of reports but not total of mined by a single
+                rigs. This is my script
+                to quickly sum up the total of mined with given timeline
+              </p>
+              <p class="description"><a href="https://github.com/aimansddiq/nshcsvtotalrig/raw/main/TotalMining.py"
+                  download="https://github.com/aimansddiq/nshcsvtotalrig/raw/main/TotalMining.py"><b><br>Source Code
+                    (.py) </b><i class="fa fa-download"></i></a></p>
+            </div>
+          </div>
+
+          <div class="col-md-6 col-lg-4 wow bounceInUp" data-wow-duration="1.3s">
+            <div class="box">
+              <div class="icon" style="background: #fceef3;"><i class="ion-ios-paper-outline"
+                  style="color: #ff689b;"></i></div>
+              <h4 class="title"><a href="https://github.com/aimansddiq/proxyscrap">Proxy Scraper Script</a></h4>
+              <p class="description">Easy, simple, quick proxy scraper. Written in Python
+              </p>
               <p class="description"><a
-                href="https://github.com/aimansddiq/bpnn/raw/main/BPNN.py" download="https://github.com/aimansddiq/bpnn/raw/main/BPNN.py"><b><br>Source File (.py) </b><i class="fa fa-download"></i></a></p>
+                  href="https://raw.githubusercontent.com/aimansddiq/proxyscrap/main/proxyscrape_scrape.py"
+                  download="https://raw.githubusercontent.com/aimansddiq/proxyscrap/main/proxyscrape_scrape.py"><b><br>Source
+                    Code (.py) </b><i class="fa fa-download"></i></a></p>
             </div>
           </div>
 
@@ -327,12 +437,13 @@
               <div class="icon" style="background: #fceef3;"><i class="ion-ios-paper-outline"
                   style="color: #ff689b;"></i></div>
               <h4 class="title"><a href="#"
-                  onclick="window.alert('The project is still working in progress'); return false;">NiceHash Mining CSV Analyzer</a></h4>
-              <p class="description">NiceHash provide their user with .csv of reports but not total of mined by a single rigs. This is my script
-                to quickly sum up the total of mined with given timeline
-              </p>
-              <p class="description"><a
-                href="https://github.com/aimansddiq/nshcsvtotalrig/raw/main/TotalMining.py" download="https://github.com/aimansddiq/nshcsvtotalrig/raw/main/TotalMining.py"><b><br>Source File (.py) </b><i class="fa fa-download"></i></a></p>
+                  onclick="window.alert('The project is still working in progress'); return false;">BPNN Calculator
+                  (WIP) </a></h4>
+              <p class="description">A calculator that automatically solve the BPNN algorithm to help you answer BPNN
+                questions</p>
+              <p class="description"><a href="https://github.com/aimansddiq/bpnn/raw/main/BPNN.py"
+                  download="https://github.com/aimansddiq/bpnn/raw/main/BPNN.py"><b><br>Source Code (.py) </b><i
+                    class="fa fa-download"></i></a></p>
             </div>
           </div>
 
