--- a/index.html
+++ b/index.html
@@ -162,6 +162,12 @@
           <h3 class="section-title">Photos</h3>
         </header>
 
+        <div class="col-lg-7 col-md-6">
+          <div class="about-content">
+            <h2>I am not a photogenic person so I do not have much photos to be shared</h2>
+          </div>
+        </div>
+
         <!--<div class="row" data-aos="fade-up" data-aos-delay="100">
           <div class="col-lg-12">
             <ul id="portfolio-flters">
